# CppPrimerLippman

./: .gitignore  CMakeLists.txt  Version_test.h  readme.md
1/: add.cc  add_item.cc  add_item2.cc  avg_price.cc  for_ex.cc  forcount.cc  main_only.cc  whilecount.cc
10/: absInt.cc  accum.cc  accum4.cc  avg_price.cc  bind2.cc  elimDups.cc  equal.cc  equiv-istream-iter.cc  inserters.cc  iostream_iter.cc  lambda.cc  newcount-size.cc  ostreamIter2.cc  rcomma.cc  rev-iters.cc  reverse-iter.cc  reverse.cc  sortSI.cc  use-istream-iter.cc  use_find.cc
11/: erasemap.cc  map1.cc  multimap.cc  pair.cc  restricted_count.cc  setOps.cc  unorderedWordCount.cc  wcEx.cc  word_count.cc  word_transform.cc
12/: Foo.h  QueryResult.h  StrBlob.h  TextQuery.cc  TextQuery.h  UP.cc  allocPtr.cc  allocSP.cc  oknew.cc  querymain.cc  release.cc  unique.cc  useBlob.cc  usealloc.cc  usealloc2.cc  weak.cc
13/: Folder.cc  Folder.h  FolderMain.cc  HasPtrUseCount.cc  HasPtrValueLike.cc  StrFolder.cc  StrFolder.h  StrFolderMain.cc  StrVec.cc  StrVec.h  String.cc  String.h  copyNoMove.cc  moveHP.cc  serial.cc  small_SI.h  substr.cc  useStrVec.cc
14/: Sales_data.cc  Sales_data.h  absInt.cc  add.cc  calc.cc  directcall.cc  fcnobj.cc  newcount-size.cc  readStr.cc
15/: Basket.cc  Basket.h  Basket_main.cc  Query.cc  Query.h  Quote.cc  Quote.h  andQueryTest.cc  and_orQueryTest.cc  get_print.cc  sample.cc  scope.cc  useQuote.cc  vecBasket.cc  virtualsNscope.cc  wordQueryTest.cc
16/: Array.cc  Blob.h  DebugDelete.h  SP.cc  Sales_data.cc  Sales_data.h  Vec.h  Vecmain.cc  array-parms4.cc  build.cc  flip.cc  (+17 more)
(+159 files in other folders)
